--- a/partials/boardSelect.html
+++ b/partials/boardSelect.html
@@ -5,18 +5,18 @@
         <div id="boardColumns" class="text-center">
             <h3 data-ng-if="!boardsLoaded">
                 <span class="fa fa-refresh fa-spin"></span>
-                Loading...
+                {{ 'LOADING' | translate }}
             </h3>
             <div class="col-md-6 col-md-offset-3 settings-widget text-center" data-ng-if="boardsLoaded && userLoaded">
                 <div data-ng-if="!currentUser.defaultBoard && boards.length">
-                    <h3 class="text-center">No Default Board</h3>
+                    <h3 class="text-center">{{ 'NO_DEFAULT_BOARD' | translate }}</h3>
                     <p>
                         You have not selected a default board.
                         You may select a default board in your <a href="#/settings">Settings</a>.
                     </p>
                 </div>
                 <div data-ng-if="!boards.length">
-                    <h3 class="text-center">No Boards</h3>
+                    <h3 class="text-center">{{ 'NO_BOARD' | translate }}</h3>
                     <p data-ng-if="currentUser.isAdmin == 0">
                         You are not assigned to any boards. Contact an admin user to be added to a board.
                     </p>
