--- a/partials/login.html
+++ b/partials/login.html
@@ -1,14 +1,14 @@
 <div id="login" class="login-container" data-ng-controller="LoginCtrl">
     <div class="bg-danger text-danger login-error" data-ng-repeat="error in errors"><p>{{ error }}</p></div>
     <form class="form-signin" role="form" data-ng-submit="logIn(formdata)" novalidate>
-        <h2 class="form-signin-heading">TaskBoard - {{ 'LOGIN_SIGN_IN' | translate }}</h2>
+        <h2 class="form-signin-heading">TaskBoard - {{ 'SIGN_IN' | translate }}</h2>
         <fieldset data-ng-disabled="isSaving">
-        <input type="text" class="form-control" placeholder="{{ 'LOGIN_USERNAME' | translate }}" required autofocus data-ng-model="formdata.username">
-        <input type="password" class="form-control" placeholder="{{ 'LOGIN_PASSWORD' | translate }}" required data-ng-model="formdata.password">
+        <input type="text" class="form-control" placeholder="{{ 'USERNAME' | translate }}" required autofocus data-ng-model="formdata.username">
+        <input type="password" class="form-control" placeholder="{{ 'PASSWORD' | translate }}" required data-ng-model="formdata.password">
         <label class="checkbox">
-            <input type="checkbox" data-ng-model="formdata.rememberme"> {{ 'LOGIN_REMEMBER_ME' | translate }}
+            <input type="checkbox" data-ng-model="formdata.rememberme"> {{ 'REMEMBER_ME' | translate }}
         </label>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">{{ 'LOGIN_SIGN_IN' | translate }}</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">{{ 'SIGN_IN' | translate }}</button>
         </fieldset>
         <p class="small text-center version">{{ version }}</p>
     </form>
